--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="section-subtitle">Explore projetos que transformamos em realidade</p>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="/ric3d/imgs/projeto1.jpg" alt="Projeto de impressão 3D">
+                        <img src="imgs/projeto1.jpg" alt="Projeto de impressão 3D">
                         <div class="gallery-overlay">
                             <h3>Coelhos da páscoa!</h3>
                             <p>Em parceria com a talentosa @pachecointeriordesign, juntamos design e criatividade para trazer peças únicas que fazem a diferença.</p>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="/ric3d/imgs/projeto2.jpg" alt="Projeto de impressão 3D">
+                        <img src="imgs/projeto2.jpg" alt="Projeto de impressão 3D">
                         <div class="gallery-overlay">
                             <h3>Porta chaves</h3>
                             <p>Porta chaves para uma quinta!</p>
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="gallery-item">
-                        <img src="/ric3d/imgs/projeto3.jpg" alt="Projeto de impressão 3D">
+                        <img src="imgs/projeto3.jpg" alt="Projeto de impressão 3D">
                         <div class="gallery-overlay">
                             <h3>Logótipo F1</h3>
                             <p>Lógotipo da Fórmula 1</p>
