--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="gallery-cta">
-                    <p>Gostavas de ver o teu projeto aqui?</p>
-                    <a href="https://www.instagram.com/ric3dpt/" class="cta-button">Fala connosco!</a>
-                </div>
             </div>
         </section>
     </div>
@@ -111,6 +107,36 @@
             </section>
         </div>
     </div>
+    <div class="contato-simples" id="falar2">
+        <h2>Vamos falar</h2>
+        <p>Vamos transformar a tua ideia em realidade!</p>
+        
+        <div class="icones">
+            <div class="contato-item">
+                <span class="icon"><i class="fa-solid fa-phone-volume"></i></span>
+                <span>+351 935 251 409</span>
+            </div>
+            
+            <div class="contato-item">
+                <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+                <span>geral@ric3d.pt</span>
+            </div>
+        </div>
+    </div>
+    <footer class="footer-dark">
+        <div class="footer-content">
+            <div class="social-links">
+                <a href="https://www.instagram.com/francisco.pduarte/" target="_blank" class="social-icon">
+                    <i class="fa-brands fa-instagram"></i>
+                    <span>@francisco.pduarte</span>
+                </a>
+                <a href="https://github.com/Wyzo" target="_blank" class="social-icon">
+                    <i class="fa-brands fa-github"></i>
+                    <span>Francisco Duarte</span>
+                </a>
+            </div>
+        </div>
+    </footer>
     <script>
         let lastScrollPosition = 0;
 let ticking = false;
